--- a/kruse.html
+++ b/kruse.html
@@ -31,7 +31,7 @@
     A second person to play an influential role in Butler's work was American writer Harlan Ellison. As a teacher at the Open Door Workshop of the Screen Writers Guild of America, he gave Butler her first honest and constructive criticism on her writing after years of lukewarm responses from composition teachers and baffling rejections from publishers. Impressed by her work, Ellison suggested she attend the Clarion Science Fiction Writers Workshop, and even contributed $100 towards her application fee. As the years passed, Ellison's mentorship became a close friendship.
   </p>
 
-  <h2>Point of view</h2>
+  <h2>Point of View</h2>
   <p>
     Butler began reading science fiction at a young age, but quickly became disenchanted by the genre's unimaginative portrayal of ethnicity and class as well as by its lack of noteworthy female protagonists. She then set to correct those gaps by, as De Witt Douglas Kilgore and Ranu Samantrai point out, "choosing to write self-consciously as an African-American woman marked by a particular history" — what Butler termed as "writing myself in". Butler's stories, therefore, are usually written from the perspective of a marginalized black woman whose difference from the dominant agents increases her potential for reconfiguring the future of her society.
   </p>
