--- a/vandeveire.html
+++ b/vandeveire.html
@@ -6,7 +6,8 @@
   <title>On Octavia E. Butler</title>
 </head>
 <body>
-  <h1>Octavia E. Butler</h1>
+  <h1>Octavia E. Butler</h1> 
+  <h3>(Matthew Edits)</h3>
   <img src="./images/octavia-butler.jpg" alt="a photo of Octavia Butler">
   <blockquote>
     "Who am I? I am a forty-seven-year-old writer who can remember being a ten-year-old writer and who expects someday to be an eighty-year-old writer. I am also comfortably asocial—a hermit.... A pessimist if I'm not careful, a feminist, a Black, a former Baptist, an oil-and-water combination of ambition, laziness, insecurity, certainty, and drive." --Butler, <a href="http://www.sfwa.org/members/butler/Autobiography.html" target="_blank" rel="noopenner noreferrer">SFWA</a>
