--- a/Shiflett.html
+++ b/Shiflett.html
@@ -13,6 +13,7 @@
       "Who am I? I am a forty-seven-year-old writer who can remember being a ten-year-old writer and who expects someday to be an eighty-year-old writer. I am also comfortably asocial—a hermit.... A pessimist if I'm not careful, a feminist, a Black, a former Baptist, an oil-and-water combination of ambition, laziness, insecurity, certainty, and drive." --Butler, <a href="http://www.sfwa.org/members/butler/Autobiography.html" target="_blank" rel="noopenner noreferrer">SFWA</a>
     </blockquote>
   </header>
+  <main>
   <section>
     <h2>Rise To Success</h2>
     <p>
@@ -40,6 +41,7 @@
       Butler began reading science fiction at a young age, but quickly became disenchanted by the genre's unimaginative portrayal of ethnicity and class as well as by its lack of noteworthy female protagonists. She then set to correct those gaps by, as De Witt Douglas Kilgore and Ranu Samantrai point out, "choosing to write self-consciously as an African-American woman marked by a particular history" — what Butler termed as "writing myself in". Butler's stories, therefore, are usually written from the perspective of a marginalized black woman whose difference from the dominant agents increases her potential for reconfiguring the future of her society.
     </p>
   </section>
+  </main>
   <footer>
     <h2>Learn More About Butler</h2>
     <ul>
