--- a/kim.html
+++ b/kim.html
@@ -13,33 +13,35 @@
       "Who am I? I am a forty-seven-year-old writer who can remember being a ten-year-old writer and who expects someday to be an eighty-year-old writer. I am also comfortably asocial—a hermit.... A pessimist if I'm not careful, a feminist, a Black, a former Baptist, an oil-and-water combination of ambition, laziness, insecurity, certainty, and drive." --Butler, <a href="http://www.sfwa.org/members/butler/Autobiography.html" target="_blank" rel="noopenner noreferrer">SFWA</a>
     </blockquote>
   </header>
-  <section>
-    <h2>Rise To Success</h2>
-    <p>
-      <a href="http://octaviabutler.org">Octavia Estelle Butler</a> (June 22, 1947 – February 24, 2006) was an American science fiction writer. A multiple recipient of both the Hugo and Nebula awards, Butler was one of the best-known women in the field. In 1995, she became the first science fiction writer to receive the MacArthur Fellowship, nicknamed the "Genius Grant".
-    </p>
-    <p>
-      Butler's rise to prominence began in 1984 when "Speech Sounds" won the Hugo Award for Short Story and, a year later, Bloodchild won the Hugo Award, the Locus Award, and the Science Fiction Chronicle Reader Award for Best Novelette. In the meantime, Butler traveled to the Amazon rainforest and the Andes to do research for what would become the Xenogenesis trilogy: Dawn (1987), Adulthood Rites (1988), and Imago (1989). These stories were republished in 2000 as the collection Lilith's Brood.
-    </p>
-    <p>
-      During the 1990s, Butler worked on the novels that solidified her fame as a writer: Parable of the Sower (1993) and Parable of the Talents (1998). In 1995, she became the first science-fiction writer to be awarded a John D. and Catherine T. MacArthur Foundation fellowship, an award that came with a prize of $295,000.
-    </p>
-  </section>
-  <section>
-    <h2>Influence</h2>
-    <p>
-      In interviews with Charles Rowell and Randall Kenan, Butler credited the struggles of her working-class mother as an important influence on her writing. Because Butler's mother received little formal education herself, she made sure that young Butler was given the opportunity to learn by bringing her reading materials that her white employers threw away, from magazines to advanced books. She also encouraged Butler to write. She bought her daughter her first typewriter when she was ten years old, and, seeing her hard at work on a story, casually remarked that maybe one day she could become a writer, causing Butler to realize that it was possible to make a living as an author. A decade later, Mrs. Butler would pay more than a month's rent to have an agent review her daughter's work. She also provided Butler with the money she had been saving for dental work to pay for Butler's scholarship so she could attend the Clarion Science Fiction Writers Workshop, where Butler sold her first two stories.
-    </p>
-    <p>
-      A second person to play an influential role in Butler's work was American writer Harlan Ellison. As a teacher at the Open Door Workshop of the Screen Writers Guild of America, he gave Butler her first honest and constructive criticism on her writing after years of lukewarm responses from composition teachers and baffling rejections from publishers. Impressed by her work, Ellison suggested she attend the Clarion Science Fiction Writers Workshop, and even contributed $100 towards her application fee. As the years passed, Ellison's mentorship became a close friendship.
-    </p>
-  </section>
-  <section>
-    <h2>Point of view</h2>
-    <p>
-      Butler began reading science fiction at a young age, but quickly became disenchanted by the genre's unimaginative portrayal of ethnicity and class as well as by its lack of noteworthy female protagonists. She then set to correct those gaps by, as De Witt Douglas Kilgore and Ranu Samantrai point out, "choosing to write self-consciously as an African-American woman marked by a particular history" — what Butler termed as "writing myself in". Butler's stories, therefore, are usually written from the perspective of a marginalized black woman whose difference from the dominant agents increases her potential for reconfiguring the future of her society.
-    </p>
-  </section>
+  <main>
+    <section>
+      <h2>Rise To Success</h2>
+      <p>
+        <a href="http://octaviabutler.org">Octavia Estelle Butler</a> (June 22, 1947 – February 24, 2006) was an American science fiction writer. A multiple recipient of both the Hugo and Nebula awards, Butler was one of the best-known women in the field. In 1995, she became the first science fiction writer to receive the MacArthur Fellowship, nicknamed the "Genius Grant".
+      </p>
+      <p>
+        Butler's rise to prominence began in 1984 when "Speech Sounds" won the Hugo Award for Short Story and, a year later, Bloodchild won the Hugo Award, the Locus Award, and the Science Fiction Chronicle Reader Award for Best Novelette. In the meantime, Butler traveled to the Amazon rainforest and the Andes to do research for what would become the Xenogenesis trilogy: Dawn (1987), Adulthood Rites (1988), and Imago (1989). These stories were republished in 2000 as the collection Lilith's Brood.
+      </p>
+      <p>
+        During the 1990s, Butler worked on the novels that solidified her fame as a writer: Parable of the Sower (1993) and Parable of the Talents (1998). In 1995, she became the first science-fiction writer to be awarded a John D. and Catherine T. MacArthur Foundation fellowship, an award that came with a prize of $295,000.
+      </p>
+    </section>
+    <section>
+      <h2>Influence</h2>
+      <p>
+        In interviews with Charles Rowell and Randall Kenan, Butler credited the struggles of her working-class mother as an important influence on her writing. Because Butler's mother received little formal education herself, she made sure that young Butler was given the opportunity to learn by bringing her reading materials that her white employers threw away, from magazines to advanced books. She also encouraged Butler to write. She bought her daughter her first typewriter when she was ten years old, and, seeing her hard at work on a story, casually remarked that maybe one day she could become a writer, causing Butler to realize that it was possible to make a living as an author. A decade later, Mrs. Butler would pay more than a month's rent to have an agent review her daughter's work. She also provided Butler with the money she had been saving for dental work to pay for Butler's scholarship so she could attend the Clarion Science Fiction Writers Workshop, where Butler sold her first two stories.
+      </p>
+      <p>
+        A second person to play an influential role in Butler's work was American writer Harlan Ellison. As a teacher at the Open Door Workshop of the Screen Writers Guild of America, he gave Butler her first honest and constructive criticism on her writing after years of lukewarm responses from composition teachers and baffling rejections from publishers. Impressed by her work, Ellison suggested she attend the Clarion Science Fiction Writers Workshop, and even contributed $100 towards her application fee. As the years passed, Ellison's mentorship became a close friendship.
+      </p>
+    </section>
+    <section>
+      <h2>Point of view</h2>
+      <p>
+        Butler began reading science fiction at a young age, but quickly became disenchanted by the genre's unimaginative portrayal of ethnicity and class as well as by its lack of noteworthy female protagonists. She then set to correct those gaps by, as De Witt Douglas Kilgore and Ranu Samantrai point out, "choosing to write self-consciously as an African-American woman marked by a particular history" — what Butler termed as "writing myself in". Butler's stories, therefore, are usually written from the perspective of a marginalized black woman whose difference from the dominant agents increases her potential for reconfiguring the future of her society.
+      </p>
+    </section>
+  </main>
   <footer>
     <h2>Learn More About Butler</h2>
       <ul>
