--- a/baxter.html
+++ b/baxter.html
@@ -38,21 +38,26 @@
       Butler began reading science fiction at a young age, but quickly became disenchanted by the genre's unimaginative portrayal of ethnicity and class as well as by its lack of noteworthy female protagonists. She then set to correct those gaps by, as De Witt Douglas Kilgore and Ranu Samantrai point out, "choosing to write self-consciously as an African-American woman marked by a particular history" — what Butler termed as "writing myself in". Butler's stories, therefore, are usually written from the perspective of a marginalized black woman whose difference from the dominant agents increases her potential for reconfiguring the future of her society.
     </p>
 </main>
-  <h2>Learn More About Butler</h2>
-  <ul>
-    <li>
-      <a href="https://en.wikipedia.org/wiki/Octavia_E._Butler" target="_blank" rel="noopenner noreferrer">Wikipedia article on Butler</a>
-    </li>
-    <li>
-      <a href="https://www.youtube.com/watch?v=e0UgiE8vYuI" target="_blank" rel="noopenner noreferrer">Democracy Now interview</a>
-    </li>
-    <li>
-      <a href="https://www.youtube.com/watch?v=66pu-Miq4tk" target="_blank" rel="noopenner noreferrer">Charlie Rose interview</a>
-    </li>
-  </ul>
 
-  <p>
-    Original page by <a href="https://codepen.io/jensimmons/details/ZBmwLo" target="_blank" rel="noopenner noreferrer">Jen Simmons</a>; Modified by Chris Lindgren
-  </p>
-</body>
-</html>
+<aside>
+    <h2>Learn More About Butler</h2>
+    <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Octavia_E._Butler" target="_blank" rel="noopenner noreferrer">Wikipedia article on Butler</a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=e0UgiE8vYuI" target="_blank" rel="noopenner noreferrer">Democracy Now interview</a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=66pu-Miq4tk" target="_blank" rel="noopenner noreferrer">Charlie Rose interview</a>
+      </li>
+    </ul>
+</aside>
+
+<footer>
+    <p>
+      Original page by <a href="https://codepen.io/jensimmons/details/ZBmwLo" target="_blank" rel="noopenner noreferrer">Jen Simmons</a>; Modified by Chris Lindgren
+    </p>
+  </body>
+  </html>
+</footer>
