--- a/lindgren.html
+++ b/lindgren.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Metadata -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>On Octavia E. Butler</title>
+  <title>Home: Octavia E. Butler</title>
+
+  <!-- Resources -->
+  <link rel="shortcut icon"  href="">
 </head>
 <body>
 
