--- a/mitchell.html
+++ b/mitchell.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>On Octavia E. Butler</title>
+  <!--Resources-->
+  <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
   <header>
@@ -64,3 +66,4 @@
     </p>
 </Footer>
 </html>
+
