--- a/hylton.html
+++ b/hylton.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>On Octavia E. Butler</title>
+
+
+  <!-- Resources -->
+  <link rel="shortcut icon" href="images/">
 </head>
+
 <body>
   <header>
     <h1>Octavia E. Butler</h1>
