--- a/luciani.html
+++ b/luciani.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>On Octavia E. Butler</title>
+
+  <!-- Resources -->
+  <link rel="stylesheet" href="">
+  <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
 
