--- a/Aucella.html
+++ b/Aucella.html
@@ -1,58 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><strong>On Octavia E. Butler</title></strong>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <header>
-  <h1>Octavia E. Butler</h1>
-  <img src="./images/octavia-butler.jpg" alt="a photo of Octavia Butler">
-  <blockquote>
-    "Who am I? I am a forty-seven-year-old writer who can remember being a ten-year-old writer and who expects someday to be an eighty-year-old writer. I am also comfortably asocial—a hermit.... A pessimist if I'm not careful, a feminist, a Black, a former Baptist, an oil-and-water combination of ambition, laziness, insecurity, certainty, and drive." --Butler, <a href="http://www.sfwa.org/members/butler/Autobiography.html" target="_blank" rel="noopenner noreferrer">SFWA</a>
-  </blockquote>
-</header>
-
-  <h2>Rise To Success</h2>
-  <p>
-    <a href="http://octaviabutler.org">Octavia Estelle Butler</a> (June 22, 1947 – February 24, 2006) was an American science fiction writer. A multiple recipient of both the Hugo and Nebula awards, Butler was one of the best-known women in the field. In 1995, she became the first science fiction writer to receive the MacArthur Fellowship, nicknamed the "Genius Grant".
-  </p>
-  <p>
-    Butler's rise to prominence began in 1984 when "Speech Sounds" won the Hugo Award for Short Story and, a year later, Bloodchild won the Hugo Award, the Locus Award, and the Science Fiction Chronicle Reader Award for Best Novelette. In the meantime, Butler traveled to the Amazon rainforest and the Andes to do research for what would become the Xenogenesis trilogy: Dawn (1987), Adulthood Rites (1988), and Imago (1989). These stories were republished in 2000 as the collection Lilith's Brood.
-  </p>
-  <p>
-    During the 1990s, Butler worked on the novels that solidified her fame as a writer: Parable of the Sower (1993) and Parable of the Talents (1998). In 1995, she became the first science-fiction writer to be awarded a John D. and Catherine T. MacArthur Foundation fellowship, an award that came with a prize of $295,000.
-  </p>
-
-  <h2>Influence</h2>
-  <p>
-    In interviews with Charles Rowell and Randall Kenan, Butler credited the struggles of her working-class mother as an important influence on her writing. Because Butler's mother received little formal education herself, she made sure that young Butler was given the opportunity to learn by bringing her reading materials that her white employers threw away, from magazines to advanced books. She also encouraged Butler to write. She bought her daughter her first typewriter when she was ten years old, and, seeing her hard at work on a story, casually remarked that maybe one day she could become a writer, causing Butler to realize that it was possible to make a living as an author. A decade later, Mrs. Butler would pay more than a month's rent to have an agent review her daughter's work. She also provided Butler with the money she had been saving for dental work to pay for Butler's scholarship so she could attend the Clarion Science Fiction Writers Workshop, where Butler sold her first two stories.
-  </p>
-  <p>
-    A second person to play an influential role in Butler's work was American writer Harlan Ellison. As a teacher at the Open Door Workshop of the Screen Writers Guild of America, he gave Butler her first honest and constructive criticism on her writing after years of lukewarm responses from composition teachers and baffling rejections from publishers. Impressed by her work, Ellison suggested she attend the Clarion Science Fiction Writers Workshop, and even contributed $100 towards her application fee. As the years passed, Ellison's mentorship became a close friendship.
-  </p>
-
-  <h2>Point of view</h2>
-  <p>
-    Butler began reading science fiction at a young age, but quickly became disenchanted by the genre's unimaginative portrayal of ethnicity and class as well as by its lack of noteworthy female protagonists. She then set to correct those gaps by, as De Witt Douglas Kilgore and Ranu Samantrai point out, "choosing to write self-consciously as an African-American woman marked by a particular history" — what Butler termed as "writing myself in". Butler's stories, therefore, are usually written from the perspective of a marginalized black woman whose difference from the dominant agents increases her potential for reconfiguring the future of her society.
-  </p>
-
-  <h2>Learn More About Butler</h2>
-  <ul>
-    <li>
-      <a href="https://en.wikipedia.org/wiki/Octavia_E._Butler" target="_blank" rel="noopenner noreferrer">Wikipedia article on Butler</a>
-    </li>
-    <li>
-      <a href="https://www.youtube.com/watch?v=e0UgiE8vYuI" target="_blank" rel="noopenner noreferrer">Democracy Now interview</a>
-    </li>
-    <li>
-      <a href="https://www.youtube.com/watch?v=66pu-Miq4tk" target="_blank" rel="noopenner noreferrer">Charlie Rose interview</a>
-    </li>
-  </ul>
-
-  <p>
-    Original page by <a href="https://codepen.io/jensimmons/details/ZBmwLo" target="_blank" rel="noopenner noreferrer">Jen Simmons</a>; Modified by Chris Lindgren
-  </p>
-</body>
-</html>
+    <h1>Want to Learn how to Row?</h1>
+    <img src="./assets/images/8-boat-image-1008x756.jpeg" alt="">
+    <h2>So you are new to rowing...</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent purus purus, aliquet nec elit quis, rutrum porttitor sapien. Nam sodales sodales lacus a vehicula. Vivamus vitae dolor vitae justo cursus interdum nec eu velit. Nunc eget dictum nisl. Etiam cursus, felis quis blandit consequat, quam lectus tincidunt ex, vel vehicula eros dui eget purus. Proin tristique, leo non placerat viverra, nibh leo tincidunt nunc, a cursus turpis urna vel massa. Maecenas eleifend mauris leo. Nulla id condimentum leo. Duis iaculis ex nisi, nec maximus enim tristique quis. Maecenas sodales aliquam eros, at mollis diam bibendum scelerisque. Ut placerat mollis metus. Donec eget nunc turpis. Nullam nec eros accumsan, vehicula lorem eu, tristique nunc. Pellentesque iaculis eros augue.</p>
+   
+    <h3>Here is where to start</h3>
+    <figure>
+        <img srcset="
+        ./assets/images/erg-image-1008x756.jpeg 1008w,
+        ./assets/images/-2016x1512.jpg 2016w,
+        ./assets/images/-4032x3024.jpg 4032w"
+        alt="Crew Team">
+        <figcaption>Picture of VT Crew Team</figcaption>
+    </figure>
+    <li>one</li>
+    <li>two</li>
+    <li>three</li>
+    <li>four</li>
+    <li>five</li>
+   
+    <main>
+        <p><strong>The first step is learning how to use the Rowing Machine</strong> Donec blandit, ipsum eget dignissim dictum, est risus luctus lacus, non faucibus quam massa sit amet nisi. Vestibulum euismod ultricies justo sed consequat. Sed nisl ipsum, euismod et lorem sit amet, condimentum molestie dolor. Cras dolor quam, blandit quis erat quis, convallis dignissim ligula. Pellentesque in enim sodales, consectetur arcu sit amet, mollis magna. Nullam nec aliquam leo, ut lacinia diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut ante tortor, ornare eget eleifend sed, eleifend ut augue. Maecenas ornare augue ligula, nec dignissim massa volutpat vitae. Donec sed pharetra nunc. Integer quis imperdiet nunc.
+   
+        Fusce fringilla vel augue consectetur lacinia. Quisque pellentesque faucibus iaculis. Vestibulum ligula tortor, pharetra vel auctor ac, efficitur pretium ante. In a laoreet ipsum, vitae dapibus ex. Pellentesque odio sem, condimentum id erat id, luctus sagittis lorem. In aliquet dignissim interdum. Nam fermentum purus vel dapibus porta. Fusce tincidunt, magna egestas malesuada efficitur, sem turpis volutpat lorem, ac dictum mauris ante at quam. Donec rutrum arcu lobortis interdum suscipit. Integer sit amet ultrices ipsum. Proin ante turpis, condimentum et fringilla sed, sollicitudin at orci. Vivamus hendrerit semper rhoncus. Mauris malesuada semper tempor.
+       
+        Maecenas consectetur sem eget metus sollicitudin ultricies. In non tortor ex. Donec dapibus eget urna non vestibulum. Phasellus pulvinar commodo erat nec vehicula. Nam in volutpat quam. Donec vitae purus quis urna luctus condimentum. Nulla eu augue eu nulla maximus venenatis. Curabitur molestie dignissim lorem, vitae facilisis tortor ultricies quis. Fusce a sapien dictum, condimentum ex in, placerat turpis.</p>
+    </main>
+   
+    <img src="pic_trulli.jpg" alt="Italian Trulli">
+   
+    <footer>Click the links to follow <3</footer>  
+</body
