--- a/Aucella.html
+++ b/Aucella.html
@@ -8,23 +8,24 @@
 <body>
     <h1>Want to Learn how to Row?</h1>
     <img src="./assets/images/8-boat-image-1008x756.jpeg" alt="">
-    <h2>So you are new to rowing...</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent purus purus, aliquet nec elit quis, rutrum porttitor sapien. Nam sodales sodales lacus a vehicula. Vivamus vitae dolor vitae justo cursus interdum nec eu velit. Nunc eget dictum nisl. Etiam cursus, felis quis blandit consequat, quam lectus tincidunt ex, vel vehicula eros dui eget purus. Proin tristique, leo non placerat viverra, nibh leo tincidunt nunc, a cursus turpis urna vel massa. Maecenas eleifend mauris leo. Nulla id condimentum leo. Duis iaculis ex nisi, nec maximus enim tristique quis. Maecenas sodales aliquam eros, at mollis diam bibendum scelerisque. Ut placerat mollis metus. Donec eget nunc turpis. Nullam nec eros accumsan, vehicula lorem eu, tristique nunc. Pellentesque iaculis eros augue.</p>
+    <h2>So you are intrested in rowing...</h2>
+    <p>Rowing is unfamiliar for most. It's a difficult sport to get into but it has many perks including increased mental and physical health. This page will provide a basic how to guide for those who would like to start rowing but don't know where to begin</p>
    
-    <h3>Here is where to start</h3>
+    <h3>Mechanics of rowing</h3>
+    <p>Understanding how to use the rowing machine is extremely signigant to the process of learning how to row. You can find a rowing machine at most local gyms. However, many use it incorrectly. To avoid injuring yourself, follow the steps below...</p>
     <figure>
         <img srcset="
         ./assets/images/erg-image-1008x756.jpeg 1008w,
         ./assets/images/-2016x1512.jpg 2016w,
         ./assets/images/-4032x3024.jpg 4032w"
         alt="Crew Team">
-        <figcaption>Picture of VT Crew Team</figcaption>
+        <figcaption>Erg pictire with directions</figcaption>
     </figure>
-    <li>one</li>
-    <li>two</li>
-    <li>three</li>
-    <li>four</li>
-    <li>five</li>
+    <li>step one</li>
+    <li>step two</li>
+    <li>step three</li>
+    <li>step four</li>
+    <li>step five</li>
    
     <main>
         <p><strong>The first step is learning how to use the Rowing Machine</strong> Donec blandit, ipsum eget dignissim dictum, est risus luctus lacus, non faucibus quam massa sit amet nisi. Vestibulum euismod ultricies justo sed consequat. Sed nisl ipsum, euismod et lorem sit amet, condimentum molestie dolor. Cras dolor quam, blandit quis erat quis, convallis dignissim ligula. Pellentesque in enim sodales, consectetur arcu sit amet, mollis magna. Nullam nec aliquam leo, ut lacinia diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut ante tortor, ornare eget eleifend sed, eleifend ut augue. Maecenas ornare augue ligula, nec dignissim massa volutpat vitae. Donec sed pharetra nunc. Integer quis imperdiet nunc.
