--- a/Aucella.html
+++ b/Aucella.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aucella.html</title>
 </head>
 <body>
     <h1>Want to Learn how to Row?</h1>
-    <img src="./assets/images/8-boat-image-1008x756.jpeg" alt="">
+    
+    <img 
+    src="images/Page1pic.jpg" 
+    alt="A four person boat rowing at sunset" />
+   
     <h2>So you are intrested in rowing...</h2>
     <p>Rowing is unfamiliar for most. It's a difficult sport to get into but it has many perks including increased mental and physical health. This page will provide a basic how to guide for those who would like to start rowing but don't know where to begin</p>
    
@@ -15,10 +19,10 @@
     <p>Understanding how to use the rowing machine is extremely signigant to the process of learning how to row. You can find a rowing machine at most local gyms. However, many use it incorrectly. To avoid injuring yourself, follow the steps below...</p>
     <figure>
         <img srcset="
-        ./assets/images/erg-image-1008x756.jpeg 1008w,
-        ./assets/images/-2016x1512.jpg 2016w,
-        ./assets/images/-4032x3024.jpg 4032w"
-        alt="Crew Team">
+        images/erg-image-1008x756.jpeg 1008w,
+        images/-2016x1512.jpg 2016w,
+        images/-4032x3024.jpg 4032w"
+        alt="VT Crew Team">
         <figcaption>Erg pictire with directions</figcaption>
     </figure>
     <li>step one</li>
@@ -28,7 +32,7 @@
     <li>step five</li>
    
     <main>
-        <p><strong>The first step is learning how to use the Rowing Machine</strong> Donec blandit, ipsum eget dignissim dictum, est risus luctus lacus, non faucibus quam massa sit amet nisi. Vestibulum euismod ultricies justo sed consequat. Sed nisl ipsum, euismod et lorem sit amet, condimentum molestie dolor. Cras dolor quam, blandit quis erat quis, convallis dignissim ligula. Pellentesque in enim sodales, consectetur arcu sit amet, mollis magna. Nullam nec aliquam leo, ut lacinia diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut ante tortor, ornare eget eleifend sed, eleifend ut augue. Maecenas ornare augue ligula, nec dignissim massa volutpat vitae. Donec sed pharetra nunc. Integer quis imperdiet nunc.
+        <p><strong>Understanding the parts of a boat is a great way to get into rowing</strong> A racing shell is a complicated Donec blandit, ipsum eget dignissim dictum, est risus luctus lacus, non faucibus quam massa sit amet nisi. Vestibulum euismod ultricies justo sed consequat. Sed nisl ipsum, euismod et lorem sit amet, condimentum molestie dolor. Cras dolor quam, blandit quis erat quis, convallis dignissim ligula. Pellentesque in enim sodales, consectetur arcu sit amet, mollis magna. Nullam nec aliquam leo, ut lacinia diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut ante tortor, ornare eget eleifend sed, eleifend ut augue. Maecenas ornare augue ligula, nec dignissim massa volutpat vitae. Donec sed pharetra nunc. Integer quis imperdiet nunc.
    
         Fusce fringilla vel augue consectetur lacinia. Quisque pellentesque faucibus iaculis. Vestibulum ligula tortor, pharetra vel auctor ac, efficitur pretium ante. In a laoreet ipsum, vitae dapibus ex. Pellentesque odio sem, condimentum id erat id, luctus sagittis lorem. In aliquet dignissim interdum. Nam fermentum purus vel dapibus porta. Fusce tincidunt, magna egestas malesuada efficitur, sem turpis volutpat lorem, ac dictum mauris ante at quam. Donec rutrum arcu lobortis interdum suscipit. Integer sit amet ultrices ipsum. Proin ante turpis, condimentum et fringilla sed, sollicitudin at orci. Vivamus hendrerit semper rhoncus. Mauris malesuada semper tempor.
        
